opam-version: "2.0"
name: "ogg"
version: "0.5.2"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-ogg"
bug-reports: "https://github.com/savonet/ocaml-ogg/issues"
synopsis: "Interface for Ogg Bitstream Library, otherwise known as libogg"
depends: [
  "ocaml"
  "ocamlfind" {build}
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
depexts: [
  ["libogg-dev"] {os-distribution = "alpine"}
  ["libogg"] {os-distribution = "arch"}
  ["libogg-dev"] {os-distribution = "debian"}
  ["libogg-dev"] {os-distribution = "ubuntu"}
  ["libogg-devel"] {os-distribution = "centos"}
  ["libogg-devel"] {os-distribution = "fedora"}
  ["libogg-devel"] {os-family = "suse"}
  ["libogg"] {os-distribution = "nixos"}
  ["libogg"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-ogg.git"
