opam-version: "2.0"
name: "ogg"
version: "0.6.1"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-ogg"
bug-reports: "https://github.com/savonet/ocaml-ogg/issues"
synopsis: "Bindings to libogg"
depends: [
  "ocaml"
  "ocamlfind" {build}
  "conf-pkg-config"
  "conf-libogg"
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
dev-repo: "git+https://github.com/savonet/ocaml-ogg.git"
